--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@
   padding: 20px 50px
 }
 
-.cardContentContainer {
+.card-container {
   padding: 8px;
   display: flex;
 }
@@ -101,7 +101,7 @@
   padding: 6px 8px;
 }
 
-.fullAvailableWidth {
+.flex-width {
   flex-grow: 1;
 }
 
