--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
-.App {
-  text-align: center;
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 50%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+thead, tbody {
+  border: 1px solid #dddddd;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+td, th {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.margin-top-24 {
+  margin-top: 24px;
+}
+
+.margin-top-12 {
+  margin-top: 12px;
+}
+
+.question-header {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.question {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.question-expression {
+  width: 70px
+}
+
+.input-number {
+  display: flex;
+  justify-content: left;
+}
+
+.label {
+  width: 20%;
+  min-width: 100px;
+  display: flex;
+  align-items: center; 
+  justify-content: left;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.input-field {
+  height: 32px;
+  width: 200px;
+  background: white;
+  border: 2px solid #5a8660;
+  padding: 8px;
+}
+
+.multi-select-wrapper {
+  height: 32px;
+  width: 216px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 8px;
+}
+
+.checkbox {
+  flex: 1;
+  padding: 8px;
+  border: 2px solid #5a8660;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.submit-button {
+  width: 100px;
+  color: white;
+  background-color: green;
+  border-width: 0px;
+  padding: 12px;
+  margin-left: 8px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-wrapper {
+  width: 40%;
+  margin: auto;
+  min-width: 500px;
   display: flex;
   flex-direction: column;
+  border-color: black;
+  border-width: 1px;
+  border-style: outset;
+  padding: 8px;
+  row-gap: 12px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.quiz-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 20px;
+  row-gap: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.quiz-container {
+  border-color: black;
+  border-width: 1px;
+  border-style: outset;
+  padding: 8px;
+  height: 400px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.form-questions-wrapper {
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
+}
+
+.quiz-root {
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
 }
